2019-11-21         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Document that the time extension is now obsolete.

2019-11-03         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Document that readdir extension can cause a
	fatal error, which should be handled with BEGINFILE.
	* gawk.1: Ditto.

2019-10-16         Arnold D. Robbins     <arnold@skeeve.com>

	* awkcard.in: BWK awk now supports RS as regexp, so remove the
	"not nawk" note.
	* gawktexi.in: Updates for BWK awk and RS as regexp.

2019-10-06         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Fix typo related to @/.../. Thanks to
	Mark Krauze <marcuscruse@ya.ru> for the report.

2019-10-04         Arnold D. Robbins     <arnold@skeeve.com>

	* texinfo.tex: Updated.

2019-09-24         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Take advantage of new indexing features in
	Texinfo 6.7.
	* sidebar.awk: Ditto.
	* texinfo.tex: Updated from Texinfo 6.7 distribution.

2019-08-23         Arnold D. Robbins     <arnold@skeeve.com>

	* awkcard.in: Fixes and updates. Some cleanup.

2019-08-21         Arnold D. Robbins     <arnold@skeeve.com>

	* texinfo.tex: Updated.

2019-08-11         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in (Other Arguments): Document the old trick of
	using ./count=1 to name a file that looks like a variable
	assignment. Thanks to Ed Morton <mortoneccc@comcast.net>
	for the suggestion.

2019-07-23         Arnold D. Robbins     <arnold@skeeve.com>

	* gawk.1: Fix typo, update edition. Thanks to Antonio
	Columbo for the pointers.
	* gawktexi.in: Update EDITION. Thanks to Antonio Columbo.
	Fix two typos. Thanks to Mark Krauze.

2019-07-21         Arnold D. Robbins     <arnold@skeeve.com>

	* awkcard.in, gawk.1, gawkinet.texi, gawktexi.in: Copyrights
	updated, spell checked.
	* wordlist, wordlist3: Updated.

2019-06-26         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in (Extension Sample Inplace): Fix backwards