@@ -263,6 +263,12 @@ Some comments on the layout for TeX.
 @finalout
 @end iftex
 
+@c Enabled '-quotes in PDF files so that cut/paste works in
+@c more places.
+
+@codequoteundirected on
+@codequotebacktick on
+
 @copying
 @docbook
 <para>
