@@ -1,3 +1,10 @@
+2019-12-15         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawktexi.in: Use `@codequoteundirected on' and
+	`@codequotebacktick on' to get straight quotes in PDF. Thanks
+	to empirical@quantbo.com for the report and to Assaf Gordon
+	for the pointer to the fix.
+
 2019-11-21         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawktexi.in: Document that the time extension is now obsolete.
